--- a/pages/user.html
+++ b/pages/user.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ユーザー</title>
+    <title>
+        {{ user.display_name if user.display_name else user.handle }} (@{{ user.handle }}) さん / {{ DataHandler.server.name }}
+    </title>    
+    <meta property="og:url" content="{{DataHandler.server.url}}/@{{user.handle}}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{{ user.display_name if user.display_name else user.handle }} (@{{ user.handle }}) さん" />
+    <meta property="og:description" content="{{user.description}}" />
+    <meta property="og:site_name" content="{{DataHandler.server.name}}" />
+    <meta property="og:image" content="{{user.icon_url}}" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -155,6 +163,15 @@
             width: 100%;
             text-align: center;
         }
+
+        .follow_view{
+            padding: 5px;
+        }
+
+        .button {
+            background-color: #28a745;
+            color: white;
+        }
     </style>
 </head>
 
@@ -186,6 +203,7 @@
 
         // トークンが存在しない場合、投稿ボタンを隠す
         const token = getCookie('token');
+        const userID = getCookie('userID');
         let loggedIn = true;
         if (!token) {
             loggedIn = false;
@@ -242,7 +260,6 @@
             fetch(`/api/user/${handle}`)
                 .then(response => response.json())
                 .then(user => {
-                    document.title = `${user.display_name ?? user.handle} (@${user.handle})`;
                     const postsContainer = document.getElementById('user-container');
 
                     if (!displayedPosts.has(user.id)) {
@@ -287,10 +304,17 @@
                                         <div class="user-displayname">${user.display_name ?? user.handle}</div>
                                         <div class="user-handle">@${user.handle}</div>
                                     </div>
+                                    <div style="margin-left: auto;">
+                                        <button class="button">フォロー</button>
+                                    </div>
                                 </div>
                             </h3>
                             <div class="card-content">
                                 <p>${user.description}</p>
+                                <div style="display: flex;">
+                                    <div class="follow_view"><b>フォロー中</b>: ${user.following.length}</div>
+                                    <div class="follow_view"><b>フォロワー</b>: ${user.followers.length}</div>
+                                </div>
                                 <span class="created-at">登録日: ${timeAgo(user.created_at)}</span>
                             </div>
                             <div style="margin-top: 30px;">
