Fix: フォロー フロントエンドは投げます

--- a/pages/user.html
+++ b/pages/user.html
@@ -305,7 +305,7 @@
                                         <div class="user-handle">@${user.handle}</div>
                                     </div>
                                     <div style="margin-left: auto;">
-                                        <button class="button">フォロー</button>
+                                        <button class="button">フォロー(まだ押しても反応しません)</button>
                                     </div>
                                 </div>
                             </h3>
